<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.android.chat.ui.activities.HomeActivity">
    <item
        android:id="@+id/actionSearch"
        android:title="@string/action_search"
        android:icon="@android:drawable/ic_search_category_default"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="always"/>
    <item
        android:id="@+id/actionAbout"
        android:orderInCategory="100"
        android:title="@string/about"
        app:showAsAction="never"/>
    <item
        android:id="@+id/actionCreateGroup"
        android:orderInCategory="100"
        android:title="@string/create_group"
        app:showAsAction="never"/>
    <item
        android:id="@+id/actionSettings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"/>
</menu>
