<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:id="@+id/cv_add"
        android:layout_width="300dp"
        android:layout_height="320dp"
        android:layout_centerInParent="true"
        app:cardCornerRadius="6dp"
        app:cardElevation="3dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/register"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="#c5c5c5"
                android:theme="@style/TextLabel">

                <EditText
                    android:id="@+id/et_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/selector_bg_edit_2"
                    android:hint="@string/Username"
                    android:inputType="textEmailAddress"
                    android:paddingBottom="2dp"
                    android:textColor="@color/colorPrimary"
                    android:textCursorDrawable="@drawable/bg_input_cursor_2"
                    android:textSize="13sp"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="#c5c5c5"
                android:theme="@style/TextLabel">

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/selector_bg_edit_2"
                    android:hint="@string/Password"
                    android:inputType="textPassword"
                    android:paddingBottom="10dp"
                    android:textColor="@color/colorPrimary"
                    android:textCursorDrawable="@drawable/bg_input_cursor_2"
                    android:textSize="13sp"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="#c5c5c5"
                android:theme="@style/TextLabel">

                <EditText
                    android:id="@+id/et_repeatpassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/selector_bg_edit_2"
                    android:hint="@string/repeat_password"
                    android:inputType="textPassword"
                    android:paddingBottom="10dp"
                    android:textColor="@color/colorPrimary"
                    android:textCursorDrawable="@drawable/bg_input_cursor_2"
                    android:textSize="13sp"/>
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/bt_go"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:background="@drawable/bt_shape_2"
                android:onClick="clickRegister"
                android:stateListAnimator="@drawable/state_list_animator_z"
                android:text="@string/register"
                android:textColor="#2fa881"/>

            <Button
                android:id="@+id/bt_login"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:background="@drawable/bt_shape_2"
                android:onClick="clickBackLogin"
                android:stateListAnimator="@drawable/state_list_animator_z"
                android:text="@string/login"
                android:textColor="#2fa881"/>

        </LinearLayout>
    </android.support.v7.widget.CardView>

</RelativeLayout>
